--- a/.gitignore
+++ b/.gitignore
@@ -111,3 +111,11 @@ models/impala/1757-ndvi-betals.rds
 # all tapirs except for Anna
 figures/tapirs
 ! figures/tapirs/CE_31_ANNA-window-7-days-dt-1-days.png
+# ignore files for peer review
+writing/response-to-reviewers-MEE.pdf
+writing/response-to-reviewers-MEE.Rmd
+writing/Stochasticity_Review_Cover_Letter.tex
+writing/Stochasticity_Review_Cover_Letter_MovementEcology.pdf
+writing/manuscript - Copy.pdf
+writing/manuscript.docx
+writing/mezzini-submission-files-2024-07-31.zip
